--- a/style.css
+++ b/style.css
@@ -1,31 +1,37 @@
 body {
     margin: 0;
     padding: 0;
-
 }
 
-. .container {
-    text-align: center;
-    margin-top: 360px;
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn {
-    border: 1px solid #3498db;
+    border: 1px solid #ec61e9;
     background: none;
     padding: 10px 20px;
     font-size: 20px;
-    font-family: monospace;
+    font-family: sans-serif;
     cursor: pointer;
     margin: 10px;
+    position: relative;
+    transition: 0.8s;
+    overflow: hidden;
+    border-radius: 15px 50px 30px 5px;
 }
 
 .btn1,
-btn2 {
-    color: #3498db;
+.btn2 {
+    color: #ec61e9;
 }
 
 .btn3,
-btn4 {
+.btn4 {
     color: #fff;
 }
 
@@ -36,34 +42,34 @@ btn4 {
 
 .btn3:hover,
 .btn4:hover {
-    color: #3498db;
+    color: #ec61e9;
 }
 
 .btn::before {
-    content: "";
+    content: '';
     position: absolute;
     left: 0;
     width: 100%;
-    height: 0%;
-    background: #3498db;
+    height: 0;
+    background: #ec61e9;
     z-index: -1;
-    transition: 0.75s;
+    transition: 0.8s;
 }
 
 .btn1::before,
-btn3::before {
+.btn3::before {
     top: 0;
     border-radius: 0 0 50% 50%;
 }
 
 .btn2::before,
-btn4::before {
-    top: 0;
+.btn4::before {
+    bottom: 0;
     border-radius: 50% 50% 0 0;
 }
 
 .btn3::before,
-btn4::before {
+.btn4::before {
     height: 180%;
 }
 
@@ -74,5 +80,5 @@ btn4::before {
 
 .btn3:hover::before,
 .btn4:hover::before {
-    height: 0%;
+    height: 0;
 }
